todo: fix long post title overflow on >992px

--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -146,11 +146,11 @@
     opacity: 0.8;
 }
 
-.nav li .nav-item-title:hover {
-    text-decoration: none;
-    opacity: 1;
-    cursor: pointer;
-}
+/*.nav li .nav-item-title:hover {*/
+/*    text-decoration: none;*/
+/*    opacity: 1;*/
+/*    cursor: pointer;*/
+/*}*/
 
 .nav li span.nav-item-title {
     -webkit-touch-callout: none; /* iOS Safari */
@@ -171,6 +171,7 @@
 
 .nav-dropdown {
     max-width: initial;
+    margin-top: 11px;
     overflow-y: auto;
     position: absolute;
     visibility: hidden;
@@ -250,6 +251,10 @@
 
     .nav-post-title-active .nav-post-title {
         display: none;
+    }
+
+    .nav li a::before {
+        content: none; /* disable underline animation on hover */
     }
 
     /*</editor-fold>*/
@@ -389,3 +394,32 @@
 /*}*/
 
 /*!*</editor-fold>*!*/
+
+@media (max-width: 700px) {
+    .site-header-background:not(.responsive-header-img) .site-nav:after,
+    .site-nav-main .site-nav:after {
+        content: none;
+    }
+
+    .nav li:last-of-type {
+        padding-right: 0;
+    }
+
+    .site-home-header .site-nav {
+        margin-left: 0;
+    }
+
+    .site-nav-main {
+        padding: 0 5vw; /* from `.outer` */
+    }
+
+    .site-nav-right {
+        display: flex;
+    }
+}
+
+@media (max-width: 500px) {
+    .subscribe-form button {
+        margin: 10px 0 0;
+    }
+}
